--- a/src/main/webapp/resources/layout.xhtml
+++ b/src/main/webapp/resources/layout.xhtml
@@ -16,8 +16,14 @@
 <div id="wrapper">
 	<header id="top">
 		<div id="topBtns">
-			<a href="#" title="Ustawienia">Ustawienia<h:graphicImage class="image" url="/resources/img/ustawienia.png" width="16" height="16" /></a>
-			<a href="#" title="Wyloguj">Wyloguj<h:graphicImage class="image" url="/resources/img/logout.png" width="16" height="16" /></a>
+			<a href="/SZGM/ustawienia/index.xhtml" title="Ustawienia">
+				Ustawienia
+				<h:graphicImage class="image" url="/resources/img/ustawienia.png" width="16" height="16" />
+			</a>
+			<a href="#{request.contextPath}/j_spring_security_logout">
+				Wyloguj
+				<h:graphicImage class="image" url="/resources/img/logout.png" width="16" height="16" />
+			</a>
 		</div>
 	</header>
 	
