--- a/src/main/webapp/konfiguracja/dodaj.xhtml
+++ b/src/main/webapp/konfiguracja/dodaj.xhtml
@@ -20,6 +20,7 @@
 					Nazwa: <h:inputText value="#{konfiguracja.nazwa}" />
 					Wartość: <h:inputText value="#{konfiguracja.wartosc}" />
 					Opis: <h:inputText value="#{konfiguracja.opis}" />
+					<h:commandButton value="Zatwierdź" action="#{konfiguracja.addKonfiguracja}" />
     	  		</h:panelGrid>
     	  	</h:form>
     		
