--- a/src/main/webapp/ustawienia/index.xhtml
+++ b/src/main/webapp/ustawienia/index.xhtml
@@ -15,7 +15,7 @@
     
 		<aside id="sideLeft">
 		<ul>
-			<li><h:outputLink value="/SZGM/konfiguracja/lista.xhtml">Konfiguracja</h:outputLink></li>
+			<li><h:outputLink value="/SZGM/konfiguracja/list.xhtml">Konfiguracja</h:outputLink></li>
 		</ul>
 		</aside><!-- #sideLeft -->
 		
