--- a/src/main/webapp/ustawienia/konfiguracja/add.xhtml
+++ b/src/main/webapp/ustawienia/konfiguracja/add.xhtml
@@ -2,14 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/resources/layout.xhtml"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:fn="java.sun.com/jsp/jstl/functions">
     
     <ui:define name="body_content">
 		<div id="container">
@@ -29,7 +30,7 @@
 
 		<aside id="sideLeft">
 			<ul>
-				<li><h:outputLink value="/SZGM/konfiguracja/list.xhtml">Konfiguracja</h:outputLink></li>
+				<li><h:outputLink value="/SZGM/ustawienia/konfiguracja/list.xhtml" rendered="#{p:ifGranted('KONFIGURACJA_LISTA')}">Konfiguracja</h:outputLink></li>
 			</ul>
 		</aside><!-- #sideLeft -->
     </ui:define>
