--- a/src/main/webapp/resources/layout.xhtml
+++ b/src/main/webapp/resources/layout.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
 	  xmlns:ui="http://java.sun.com/jsf/facelets"
-	  >
+	  xmlns:p="http://primefaces.org/ui">
       
 <h:head>
 	<title>System Zarządzania Gospodarką Magazynową</title>
@@ -39,8 +39,8 @@
 			<a href="#" title="Faktury Zakupu"><h:graphicImage class="image" url="/resources/img/fz.png" /></a>
 			<a href="#" title="Dokumenty Wychodzące"><h:graphicImage class="image" url="/resources/img/dw.png" /></a>
 			<h:outputLink value="/SZGM/dokp/index.xhtml"><h:graphicImage class="image" url="/resources/img/dp.png" /></h:outputLink>
-			<h:outputLink value="/SZGM/towary/list.xhtml"><h:graphicImage class="image" url="/resources/img/tow.png" /></h:outputLink>
-			<a href="#" title="Kontrahenci"><h:graphicImage class="image" url="/resources/img/kontr.png" /></a>
+			<h:outputLink value="/SZGM/towary/list.xhtml" rendered="#{p:ifGranted('TOWARY_LISTA')}"><h:graphicImage class="image" url="/resources/img/tow.png" /></h:outputLink>
+			<h:outputLink value="/SZGM/kontrahenci/list.xhtml" rendered="#{p:ifGranted('KONTRAHENT_LISTA')}"><h:graphicImage class="image" url="/resources/img/kontr.png" /></h:outputLink>
 			<a href="#" title="Statystyki"><h:graphicImage class="image" url="/resources/img/stat.png" /></a>
 		</div>
 	</header><!-- #header-->
