--- a/src/main/webapp/kontrahenci/list.xhtml
+++ b/src/main/webapp/kontrahenci/list.xhtml
@@ -244,7 +244,7 @@
 
 		<aside id="sideLeft">
 		<ul>
-			<li><h:outputLink value="/SZGM/kontrahenci/list.xhtml" rendered="#{p:ifGranted('KONTRAHENT_LISTA')}">Lista kontrahentów</h:outputLink></li>
+			<h:outputLink value="/SZGM/kontrahenci/list.xhtml" rendered="#{p:ifGranted('KONTRAHENT_LISTA')}"><li>Lista kontrahentów</li></h:outputLink>
 		</ul>
 		</aside>
 
