--- a/src/main/webapp/towary/list.xhtml
+++ b/src/main/webapp/towary/list.xhtml
@@ -17,7 +17,7 @@
 			<div id="content">
 
 				<h:form id="cloneDialogForm">
-					<p:dialog id="cloneDialog" header="Modal Dialog"
+					<p:dialog id="cloneDialog"
 						widgetVar="cloneDialog" modal="true" height="100">
 						<h:outputText value="Podaj nazwę nowego towaru" />
 						<p:inputText value="#{towar.newName}" style="width:100%" />
@@ -260,10 +260,8 @@
 
 		<aside id="sideLeft">
 		<ul>
-			<li><h:outputLink value="/SZGM/towary/list.xhtml" rendered="#{p:ifGranted('TOWARY_LISTA')}">Lista Towarów</h:outputLink></li>
-			<li><h:outputLink value="/SZGM/towary/etykiety.xhtml">Wydruk Etykiet</h:outputLink></li>
-			<li><h:outputLink value="/SZGM/towary/eksport.xhtml">Eksport</h:outputLink></li>
-			<li><h:outputLink value="/SZGM/towary/import.xhtml">Import</h:outputLink></li>
+			<h:outputLink value="/SZGM/towary/list.xhtml" rendered="#{p:ifGranted('TOWARY_LISTA')}"><li>Lista Towarów</li></h:outputLink>
+			<h:outputLink value="/SZGM/towary/etykiety.xhtml" rendered="#{p:ifGranted('WYDRUK_ETYKIET')}"><li>Wydruk Etykiet</li></h:outputLink>
 		</ul>
 		</aside>
 
