--- a/src/main/webapp/ustawienia/konfiguracja/list.xhtml
+++ b/src/main/webapp/ustawienia/konfiguracja/list.xhtml
@@ -96,7 +96,9 @@
 
 		<aside id="sideLeft">
 		<ul>
-			<li><h:outputLink value="/SZGM/ustawienia/konfiguracja/list.xhtml" rendered="#{p:ifGranted('KONFIGURACJA_LISTA')}">Konfiguracja</h:outputLink></li>
+			<h:outputLink value="/SZGM/ustawienia/konfiguracja/list.xhtml" rendered="#{p:ifGranted('KONFIGURACJA_LISTA')}"><li>Konfiguracja</li></h:outputLink>
+			<h:outputLink value="/SZGM/ustawienia/uzytkownik/list.xhtml" rendered="#{p:ifGranted('UZYTKOWNIK_LISTA')}"><li>Użytkownicy</li></h:outputLink>
+			<h:outputLink value="/SZGM/ustawienia/rola/list.xhtml" rendered="#{p:ifGranted('ROLA_LISTA')}"><li>Role</li></h:outputLink>
 		</ul>
 		</aside>
 
