--- a/src/main/webapp/towary/add.xhtml
+++ b/src/main/webapp/towary/add.xhtml
@@ -17,44 +17,70 @@
 			<div id="content">
     		
 			<h:form>
-			<h:panelGrid columns="2">
-				Nazwa: <h:inputText value="#{towar.nazwa}" />
-				Cena Netto: <h:inputText value="#{towar.cenaNetto}" />
+			<h:panelGrid columns="3">
+				<h:outputLabel for="nazwa" value="Nazwa:" />  
+				<h:inputText id = "nazwa" value="#{towar.nazwa}">
+					<f:validateRegex pattern='#{konfiguracja.getFieldRegex("towar.nazwa.regex")}'/>
+				</h:inputText>
+				<p:message for="nazwa" />  
+            	
+				<h:outputLabel for="cena" value="Cena:" />
+				<h:inputText id="cena" value="#{towar.cenaNetto}">
+				</h:inputText>
+				<h:outputText value="" />
 				Vat: <h:selectOneMenu value="#{towar.vat}">
    						<f:selectItems value="#{vat.getList()}" var="v"
    						itemLabel="#{v.nazwa}" itemValue="#{v}" />
    						<f:converter converterId="vatConverter" />
    					</h:selectOneMenu>
-				PKWiU: <h:inputText value="#{towar.pkwiu}" />
+   				<h:outputText value="" />
+   				<h:outputLabel for="pkwiu" value="PKWiU:" />
+				<h:inputText id="pkwiu" value="#{towar.pkwiu}">
+					<f:validateRegex pattern='#{konfiguracja.getFieldRegex("towar.nazwa.pkwiu")}'/>
+				</h:inputText>
+				<h:outputText value="" />
 				Jednostka: <h:selectOneMenu value="#{towar.jednostka}">
    						<f:selectItems value="#{jednostka.getList()}" var="j"
    						itemLabel="#{j.nazwa}" itemValue="#{j}" />
    						<f:converter converterId="jednostkaConverter" />
    					</h:selectOneMenu>
+   					<h:outputText value="" />
 				Waluta: <h:selectOneMenu value="#{towar.waluta}">
    						<f:selectItems value="#{waluta.getList()}" var="w"
    						itemLabel="#{w.nazwa}" itemValue="#{w}" />
    						<f:converter converterId="walutaConverter" />
    					</h:selectOneMenu>
-				Cena Zakupu: <h:inputText value="#{towar.cenaZakupu}" />
+   					<h:outputText value="" />
+				<h:outputLabel for="cenazakupu" value="Cena Zakupu:" />
+				<h:inputText id="cenazakupu" value="#{towar.cenaZakupu}">
+				</h:inputText>
+				<h:outputText value="" />
 				Pytaj O Cenę: <h:selectOneMenu value="#{towar.pytajOCene}">
    						<f:selectItem itemValue="1" itemLabel="Tak" />
 					   	<f:selectItem itemValue="0" itemLabel="Nie" />
 					</h:selectOneMenu>
+					<h:outputText value="" />
 				Aktywny: <h:selectOneMenu value="#{towar.aktywny}">
    						<f:selectItem itemValue="1" itemLabel="Tak" />
 					   	<f:selectItem itemValue="0" itemLabel="Nie" />
 					</h:selectOneMenu>
+					<h:outputText value="" />
 				Promocja: <h:selectOneMenu value="#{towar.promocja}">
    						<f:selectItem itemValue="1" itemLabel="Tak" />
 					   	<f:selectItem itemValue="0" itemLabel="Nie" />
 					</h:selectOneMenu>
+					<h:outputText value="" />
 				Grupa: <h:selectOneMenu value="#{towar.grupa}">
    						<f:selectItems value="#{grupa.getList()}" var="g"
    						itemLabel="#{g.nazwa}" itemValue="#{g}" />
    						<f:converter converterId="grupaConverter" />
    					</h:selectOneMenu>
-				Kod Kreskowy: <h:inputText value="#{towar.kodKreskowy}" />
+   					<h:outputText value="" />
+				<h:outputLabel for="kodkreskowy" value="Kod Kreskowy:" />
+				<h:inputText id="kodkreskowy" value="#{towar.kodKreskowy}">
+					<f:validateRegex pattern='#{konfiguracja.getFieldRegex("towar.nazwa.kod.kreskowy")}'/>
+				</h:inputText>
+				<h:outputText value="" />
     			<h:commandButton value="Zatwierdź" action="#{towar.addTowar}" />
     	  	</h:panelGrid>
     	  	</h:form>
@@ -66,6 +92,8 @@
 		<ul>
 			<h:outputLink value="/SZGM/towary/list.xhtml" rendered="#{p:ifGranted('TOWARY_LISTA')}"><li>Lista Towarów</li></h:outputLink>
 			<h:outputLink value="/SZGM/towary/etykiety.xhtml" rendered="#{p:ifGranted('WYDRUK_ETYKIET')}"><li>Wydruk Etykiet</li></h:outputLink>
+			<h:outputLink value="/SZGM/towary/import.xhtml" rendered="#{p:ifGranted('TOWARY_IMPORT')}"><li>Import</li></h:outputLink>
+			<h:outputLink value="/SZGM/towary/export.xhtml" rendered="#{p:ifGranted('TOWARY_EXPORT')}"><li>Export</li></h:outputLink>
 		</ul>
 		</aside><!-- #sideLeft -->
     </ui:define>
